// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveHeader render: isNavCollapsed equals false 1`] = `
<DocumentFragment>
  <mock-header
    faritems="[object Object]"
    narrowmodestatus="[object Object]"
  />
</DocumentFragment>
`;

exports[`InteractiveHeader render: isNavCollapsed equals true 1`] = `
<DocumentFragment>
  <mock-header
    faritems="[object Object]"
    narrowmodestatus="[object Object]"
    navmenu="[object Object]"
  />
</DocumentFragment>
`;

exports[`InteractiveHeader render: tabClosed equals false 1`] = `
<DocumentFragment>
  <mock-header
    deps="[object Object]"
    faritems="[object Object]"
    narrowmodestatus="[object Object]"
  />
</DocumentFragment>
`;

exports[`InteractiveHeader render: tabClosed equals true 1`] = `
<DocumentFragment>
  <mock-header
    deps="[object Object]"
    narrowmodestatus="[object Object]"
  />
</DocumentFragment>
`;
